[package]
name          = "mio-chan"
version       = "0.1.0"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>", "Alex Sayers <alex.sayers@gmail.com>"]
description   = "Thread safe communication channel implementing Evented"
documentation = "https://docs.rs/mio-chan"
homepage      = "https://github.com/asayers/mio-chan"
repository    = "https://github.com/asayers/mio-chan"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
exclude       = [
  ".gitignore",
  ".travis.yml",
]

[dependencies]
mio = "0.6"
log = "0.3.1"
lazycell = "0.4.0"
slab = "0.3.0"
